--- a/test/dla/makefile
+++ b/test/dla/makefile
@@ -2,7 +2,7 @@ CASES = dla0 dla1 dla2 dla3
 
 all:
 	for case in $(CASES); do \
-		cd $$case && $(MAKE) all; \
+		cd $$case && $(MAKE) all || exit 1; \
 		cd -; \
 	done
 
@@ -14,6 +14,6 @@ clean:
 
 test:
 	for case in $(CASES); do \
-		cd $$case && $(MAKE) test; \
+		cd $$case && $(MAKE) test || exit 1; \
 		cd -; \
 	done
