--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -13,11 +13,11 @@ jobs:
     if: github.actor != 'github-classroom[bot]'
     steps:
     - name: Setup verilator
-    - uses: actions/checkout@v4
-    - uses: veryl-lang/setup-verilator@v1
+      uses: actions/checkout@v4
+      uses: veryl-lang/setup-verilator@v1
       with:
         version: 5.030
-    - run: verilator --version
+      run: verilator --version
     - name: Checkout code
       uses: actions/checkout@v4
     - name: dla compilation test
