test-v1.3 fix-2: Add verilator support

--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -17,7 +17,9 @@ jobs:
       uses: veryl-lang/setup-verilator@v1
       with:
         version: 5.030
-      run: verilator --version
+        command: |
+          verilator --version
+        timeout: 10
     - name: Checkout code
       uses: actions/checkout@v4
     - name: dla compilation test
