test-v1.3 fix-4: Use docker image

--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -10,6 +10,7 @@ permissions:
 jobs:
   run-autograding-tests:
     runs-on: ubuntu-latest
+    container: ghcr.io/jackiempty/aoc2026-env:latest
     if: github.actor != 'github-classroom[bot]'
     steps:
     - name: Setup verilator
